# jotly

./: .gitignore  AGENTS.md  CONTRIBUTING.md  PRODUCT.md  README.md  mprocs.yaml
.beads/: issues.jsonl
.claude/commands/: update-agents-md.md  update-product.md  update-readme.md
.github/workflows/: backend-checks.yml  desktop-checks.yml
backend/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/: main.py
backend/src/services/: __init__.py  audio.py  transcription.py
desktop/: biome.json  electron-vite.config.ts  package.json  tsconfig.json
desktop/src/main/: backend.ts  hotkey.ts  index.ts  key-capture.ts  settings.ts  tray.ts
desktop/src/main/portals/: desktop-portal.ts  global-shortcuts.ts
electron/: package.json  tsconfig.json
electron/src/main/: backend.ts  hotkey.ts  index.ts
scripts/: dev.sh
